--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -39,10 +39,11 @@
         android:id="@+id/pulse_layout"
         android:layout_margin="10dp"
         >
-        <TextView
+        <com.smart.HealthAssistant.view.ECGView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:id="@+id/ecg_view"
             />
         <TextView
             android:layout_width="wrap_content"
