--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -7,13 +7,12 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     >
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+
+    <WebView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/mVp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"
+        android:id="@+id/msg_web"
+        >
+
+    </WebView>
 </LinearLayout>
