--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,5 +7,11 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     >
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/home_listview"
+        >
 
+    </ListView>
 </LinearLayout>
