--- a/app/src/main/res/layout/fragment_setting_msg.xml
+++ b/app/src/main/res/layout/fragment_setting_msg.xml
@@ -7,15 +7,30 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     >
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
-        android:text="导出EXCEL"
+        android:text="设置短信内容"
         android:textSize="30dp"
         android:gravity="center"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入短信内容"
+        android:gravity="center"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="30dp"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="保存"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         />
 </LinearLayout>
