--- a/app/src/main/res/layout/fragment_setting_wifi.xml
+++ b/app/src/main/res/layout/fragment_setting_wifi.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     >
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/mVp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:text="设置wifi"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        />
 </LinearLayout>
