--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:textSize="30dp"
+        android:id="@+id/data_save_path_tv"
+        />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,6 +24,7 @@
         android:text="导出EXCEL"
         android:textSize="30dp"
         android:gravity="center"
+        android:id="@+id/data_save_btn"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
