--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -7,25 +7,21 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     >
-    <TextView
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:textSize="30dp"
-        android:id="@+id/data_save_path_tv"
+        android:layout_height="300dp"
         />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
-        android:text="导出EXCEL"
+        android:text="导出txt文件"
         android:textSize="30dp"
         android:gravity="center"
         android:id="@+id/data_save_btn"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         />
